fix css where content was out of container

--- a/app/assets/stylesheets/iox/application.css.scss
+++ b/app/assets/stylesheets/iox/application.css.scss
@@ -58,7 +58,6 @@ h2, h3{
   overflow: hidden;
   left: 70px;
   right: 0;
-  top: 55px;
   bottom: 0;
   position: absolute;
 }
